-Update CMakeList.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,34 +10,42 @@ IF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
 ENDIF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
 
 IF(CMAKE_CXX_FLAGS_DEBUG)
-	SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/debug)
+        SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../)
 ELSE(CMAKE_CXX_FLAGS_DEBUG)
-	SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/)
+        SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../)
 ENDIF(CMAKE_CXX_FLAGS_DEBUG)
 
-FIND_PACKAGE(X11)
-FIND_PACKAGE(OpenGL)
+IF(BUILD_VM)
+        FIND_PACKAGE(X11)
+        FIND_PACKAGE(OpenGL)
+        SET(INCLUDE_DIRS ${X11_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})
+        SET(INCLUDE_LIBS ${X11_LIBRARIES} Xxf86vm ${OPENGL_LIBRARIES} "/usr/local/lib/libIrrlicht.a")
+ENDIF(BUILD_VM)
+
+IF(NOT BUILD_VM)
+        SET(INCLUDE_LIBS Irrlicht)
+ENDIF(NOT BUILD_VM)
+
 
 INCLUDE_DIRECTORIES(
-	"/usr/local/include/"
-	${X11_INCLUDE_DIR}
-	${OPENGL_INCLUDE_DIR}
-	)
+        "/usr/include/"
+        "/usr/local/include/"
+        "/usr/include/irrlicht"
+)
 
 FILE(GLOB SRCS src/*.cpp)
 #FILE(GLOB HDRS include/*.h)
 
 LINK_DIRECTORIES(
 	"/usr/lib/"
-	)
+        "/usr/local/lib/"
+        ${INCLUDE_DIRS}
+)
 ADD_EXECUTABLE(Labyrinth-Irrlicht 
 	${SRCS}
 	#${HDRS}
 	)
 
 TARGET_LINK_LIBRARIES(Labyrinth-Irrlicht
-	${X11_LIBRARIES}
-	Xxf86vm
-	${OPENGL_LIBRARIES}
-	"/usr/local/lib/libIrrlicht.a"
+            ${INCLUDE_LIBS}
 	)
