--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,11 +9,7 @@ IF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
 	SET(CMAKE_BUILD_TYPE RelWithDebInfo)
 ENDIF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
 
-IF(CMAKE_CXX_FLAGS_DEBUG)
-        SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../)
-ELSE(CMAKE_CXX_FLAGS_DEBUG)
-        SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../)
-ENDIF(CMAKE_CXX_FLAGS_DEBUG)
+set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/)
 
 SET(INCLUDE_LIBS Irrlicht)
 
